# ChatService

./: CMakeLists.txt  ChatEventDef.h  ChatProtocol.h  ChatRoom.cpp  ChatRoom.h  ChatService.cpp  ChatService.h  ClientUser.cpp  ClientUser.h  ErrCodeDef.h  README.md  RoomIDMgr.cpp  RoomIDMgr.h  RoomMgr.cpp  RoomMgr.h  main.cpp
include/: HYBuffer.h  HYEvent.h  HYFunc.h  HYLog.h  HYTimer.h  LinkUser.h  Logger.h  NetService.h  Protocol.h  ServiceBase.h  TCPSession.h  ThreadPool.h
